# article-platform

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_createsuperuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_article_options.py  0006_alter_userprofile_managers_alter_userprofile_email.py
djangocourse/: settings.py  urls.py
locale/es/LC_MESSAGES/: django.po
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app/layouts/: base_form.html
templates/registration/: login.html
